[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Ressources/Roboto-Black.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 5
outline_color = Color( 1, 0.564706, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 8
font_data = ExtResource( 2 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.90678, 1 )
colors = PoolColorArray( 0.145098, 0.145098, 0.164706, 1, 1, 0.564706, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="StyleBoxTexture" id=4]
texture = SubResource( 3 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="Menu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ContainerGlobal" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -1

[node name="Label" type="Label" parent="ContainerGlobal"]
margin_right = 960.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
text = "Re.FOUND"
align = 1
valign = 1

[node name="NetworkContainer" type="HBoxContainer" parent="ContainerGlobal"]
margin_top = 117.0
margin_right = 960.0
margin_bottom = 527.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="ContainerGlobal/NetworkContainer"]
margin_right = 960.0
margin_bottom = 410.0
size_flags_horizontal = 3

[node name="Join" type="Tabs" parent="ContainerGlobal/NetworkContainer/TabContainer"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer2" type="HBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Join"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2"]
margin_left = 396.0
margin_right = 555.0
margin_bottom = 374.0
size_flags_vertical = 3
alignment = 1

[node name="Ip" type="HBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer"]
editor/display_folded = true
margin_top = 140.0
margin_right = 159.0
margin_bottom = 164.0
alignment = 1

[node name="Ip_label" type="Label" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer/Ip"]
margin_top = 5.0
margin_right = 57.0
margin_bottom = 19.0
text = "Server IP"

[node name="ip" type="LineEdit" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer/Ip"]
margin_left = 61.0
margin_right = 159.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "192.168.1.22"
align = 1
max_length = 12
expand_to_text_length = true

[node name="Port" type="HBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer"]
editor/display_folded = true
margin_top = 168.0
margin_right = 159.0
margin_bottom = 192.0
alignment = 1

[node name="Port_label" type="Label" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer/Port"]
margin_top = 5.0
margin_right = 70.0
margin_bottom = 19.0
text = "Server Port"

[node name="port" type="LineEdit" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer/Port"]
margin_left = 74.0
margin_right = 159.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "4242"
align = 1
max_length = 5

[node name="Join" type="Button" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer"]
margin_top = 196.0
margin_right = 159.0
margin_bottom = 216.0
text = "Join"

[node name="Status" type="Label" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer"]
margin_top = 220.0
margin_right = 159.0
margin_bottom = 234.0
custom_colors/font_color = Color( 1, 0.564706, 0, 1 )
align = 1
autowrap = true

[node name="Host" type="Tabs" parent="ContainerGlobal/NetworkContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Host"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer"]
margin_left = 384.0
margin_right = 568.0
margin_bottom = 374.0
size_flags_vertical = 3
alignment = 1

[node name="Port" type="HBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 184.0
margin_bottom = 173.0
alignment = 1

[node name="Label" type="Label" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer/Port"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "PORT :"

[node name="SpinBox" type="SpinBox" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer/Port"]
margin_left = 46.0
margin_right = 184.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_value = 9999.0
value = 4242.0

[node name="PlayerNumber" type="HBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 177.0
margin_right = 184.0
margin_bottom = 201.0
alignment = 1

[node name="Label" type="Label" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer/PlayerNumber"]
margin_top = 5.0
margin_right = 106.0
margin_bottom = 19.0
text = "PLAYER NUMBER"

[node name="SpinBox2" type="SpinBox" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer/PlayerNumber"]
margin_left = 110.0
margin_right = 184.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_value = 32.0
value = 8.0

[node name="Host" type="Button" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer"]
margin_top = 205.0
margin_right = 184.0
margin_bottom = 225.0
text = "Host"

[node name="Quit" type="Button" parent="ContainerGlobal"]
margin_top = 526.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Quit"
align = 2
[connection signal="pressed" from="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="ContainerGlobal/Quit" to="." method="_on_Quit_pressed"]
